Expande o uso das operações de undo/redo e refatora código
Closes #2.
Closes #3.